--- a/index.ipynb
+++ b/index.ipynb
@@ -64,13 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "roll_dice = None"
+    "roll_dice = {1,2,3,4,5,6}"
    ]
   },
   {
@@ -88,7 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "event = None"
+    "event = "
    ]
   },
   {
@@ -797,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
