--- a/index.ipynb
+++ b/index.ipynb
@@ -196,10 +196,10 @@
    "source": [
     "np.random.seed(12345) # to make sure there is no randomness\n",
     "\n",
-    "dice_10 = np.random.randint(1,7,size= 1)\n",
-    "dice_1k = np.random.randint(1,7,size= 10)\n",
-    "dice_1m = np.random.randint(1,7,size=None)\n",
-    "dice_100m = np.random.randint(1,7,size=None)"
+    "dice_10 = np.random.randint(1,7,size= 10)\n",
+    "dice_1k = np.random.randint(1,7,size= 1000)\n",
+    "dice_1m = np.random.randint(1,7,size=1000000)\n",
+    "dice_100m = np.random.randint(1,7,size=No)"
    ]
   },
   {
