automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,18 +188,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-2be9319dfa19>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-2be9319dfa19>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    dice_100m = np.random.randint(1,7,size 10000000)\u001b[0m\n\u001b[0m                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(12345) # to make sure there is no randomness\n",
     "\n",
     "dice_10 = np.random.randint(1,7,size= 10)\n",
     "dice_1k = np.random.randint(1,7,size= 1000)\n",
     "dice_1m = np.random.randint(1,7,size=1000000)\n",
-    "dice_100m = np.random.randint(1,7,size=No)"
+    "dice_100m = np.random.randint(1,7,size 10000000)"
    ]
   },
   {
