automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    },
    "outputs": [],
    "source": [
-    "event_10 = {}\n",
+    "event_10 = np.sum(di)\n",
     "event_1k = None\n",
     "event_1m = None\n",
     "event_100m = None"
