automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,8 +215,8 @@
    },
    "outputs": [],
    "source": [
-    "event_10 = np.sum(di)\n",
-    "event_1k = None\n",
+    "event_10 = np.sum(dice_10 > 4)\n",
+    "event_1k = N\n",
     "event_1m = None\n",
     "event_100m = None"
    ]
