automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,9 +216,9 @@
    "outputs": [],
    "source": [
     "event_10 = np.sum(dice_10 > 4)\n",
-    "event_1k = N\n",
-    "event_1m = None\n",
-    "event_100m = None"
+    "event_1k = np.sum(dice_1k > 4)\n",
+    "event_1m = np.sum(dice_1m > 4)\n",
+    "event_100m = np.sum(dic)"
    ]
   },
   {
