automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -209,16 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "event_10 = np.sum(dice_10 > 4)\n",
     "event_1k = np.sum(dice_1k > 4)\n",
     "event_1m = np.sum(dice_1m > 4)\n",
-    "event_100m = np.sum(dic)"
+    "event_100m = np.sum(dice_100m > 4)"
    ]
   },
   {
@@ -236,7 +234,7 @@
    },
    "outputs": [],
    "source": [
-    "prob_10 = None\n",
+    "prob_10 = event_10\n",
     "prob_1k = None\n",
     "prob_1m = None\n",
     "prob_100m = None\n",
