--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
    },
    "outputs": [],
    "source": [
-    "prob_10 = event_10/\n",
+    "prob_10 = event_10/len()\n",
     "prob_1k = None\n",
     "prob_1m = None\n",
     "prob_100m = None\n",
