--- a/index.ipynb
+++ b/index.ipynb
@@ -228,22 +228,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "1000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(dice_10)"
+    "len(dice_1k)"
    ]
   },
   {
@@ -264,8 +264,8 @@
    ],
    "source": [
     "prob_10 = event_10/len(dice_10)\n",
-    "prob_1k = None\n",
-    "prob_1m = None\n",
+    "prob_1k = event_1k/len(dice_1k)\n",
+    "prob_1m = event_\n",
     "prob_100m = None\n",
     "prob_10, prob_1k, prob_1m, prob_100m  # 0.5 0.331 0.333657 0.33329752"
    ]
