--- a/index.ipynb
+++ b/index.ipynb
@@ -265,8 +265,8 @@
    "source": [
     "prob_10 = event_10/len(dice_10)\n",
     "prob_1k = event_1k/len(dice_1k)\n",
-    "prob_1m = event_\n",
-    "prob_100m = None\n",
+    "prob_1m = event_1m/len(dice_1m)\n",
+    "prob_100m = event_100m/len(dice_100m)\n",
     "prob_10, prob_1k, prob_1m, prob_100m  # 0.5 0.331 0.333657 0.33329752"
    ]
   },
