automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,16 +248,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.5, None, None, None)"
+       "(0.5, 0.331, 0.333657, 0.3333288)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,9 +321,9 @@
    },
    "outputs": [],
    "source": [
-    "P_afr = None\n",
-    "P_ant = None\n",
-    "P_as = None\n",
+    "P_afr = 0.161\n",
+    "P_ant = 0.000\n",
+    "P_as = 0.598\n",
     "P_eur = None\n",
     "P_na = None\n",
     "P_aus = None\n",
