automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -337,13 +337,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "only 2 non-keyword arguments accepted",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-1b3e36bf2c2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcontinents\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mP_afr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mP_ant\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mP_as\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mP_eur\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mP_na\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mP_aus\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mP_sa\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontinents\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: only 2 non-keyword arguments accepted"
+     ]
+    }
+   ],
    "source": [
-    "continents = np.array([P_afr, P_ant, P_as, P_eur, P_na, P_aus, P_sa])\n",
+    "continents = np.array(P_afr, P_ant, P_as, P_eur, P_na, P_aus, P_sa)\n",
     "print(continents)"
    ]
   },
