automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -386,7 +386,8 @@
    ],
    "source": [
     "axiom1 = (continents > 0).all()\n",
-    "if axiom1 == \"\""
+    "if axiom1 == True:\n",
+    "    "
    ]
   },
   {
