automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -385,7 +385,8 @@
     }
    ],
    "source": [
-    "axiom1 = (continents > 0).all()\n",
+    "axiom1a = (continents > 0).all()\n",
+    "axiom1b = (continents <)\n",
     "if axiom1 == True:\n",
     "    "
    ]
