automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -385,9 +385,9 @@
     }
    ],
    "source": [
-    "axiom1a = (continents > 0).all()\n",
-    "axiom1b = (continents <)\n",
-    "if axiom1 == True:\n",
+    "axiom1a = (continents >= 0).all()\n",
+    "axiom1b = (continents <= 0 ).all()\n",
+    "print(axiom1a,a)\n",
     "    "
    ]
   },
