--- a/index.ipynb
+++ b/index.ipynb
@@ -384,7 +384,7 @@
    "source": [
     "axiom1a = (continents >= 0).all()\n",
     "axiom1b = (continents <= 0 ).all()\n",
-    "\n",
+    "axiom\n",
     "print(axiom1a,axiom1b)\n",
     "    "
    ]
