--- a/index.ipynb
+++ b/index.ipynb
@@ -385,7 +385,7 @@
     "axiom1a = (continents >= 0).all()\n",
     "axiom1b = (continents <= 0 ).all()\n",
     "axiom2 = np.sum(continents) == 1\n",
-    "if \n",
+    "if axiom1a == True and axi\n",
     "print(axiom1a,axiom1b,axiom2)\n",
     "    "
    ]
