automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -385,7 +385,8 @@
     "axiom1a = (continents >= 0).all()\n",
     "axiom1b = (continents <= 0 ).all()\n",
     "axiom2 = np.sum(continents) == 1\n",
-    "if axiom1a == True and axi\n",
+    "if axiom1a == True and axiom1b == True and axiom2 == True:\n",
+    "    \n",
     "print(axiom1a,axiom1b,axiom2)\n",
     "    "
    ]
