--- a/index.ipynb
+++ b/index.ipynb
@@ -386,7 +386,7 @@
     "axiom1b = (continents <= 0 ).all()\n",
     "axiom2 = np.sum(continents) == 1\n",
     "if axiom1a == True and axiom1b == True and axiom2 == True:\n",
-    "    \n",
+    "    print('We')\n",
     "print(axiom1a,axiom1b,axiom2)\n",
     "    "
    ]
