automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -389,10 +389,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def check_axioms(sample_space):\n",
@@ -414,11 +412,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not quite!\n"
+     ]
+    }
+   ],
    "source": [
     "check_axioms(continents)"
    ]
