automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,7 @@
    "outputs": [],
    "source": [
     "def check_axioms(sample_space):\n",
-    "    axiom1a = (continents >= 0).all()\n",
+    "    axiom1a = (co >= 0).all()\n",
     "    axiom1b = (continents <= 0 ).all()\n",
     "    axiom2 = np.sum(continents) == 1\n",
     "    if axiom1a == True and axiom1b == True and axiom2 == True:\n",
@@ -436,10 +436,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_1 = np.array([0.05, 0.2, 0.3, 1.01])\n",
@@ -449,18 +447,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'check_axiom' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-10b2a960b55c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcheck_axiom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'check_axiom' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not quite!\n",
+      "Not quite!\n",
+      "Not quite!\n"
      ]
     }
    ],
