automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -544,22 +544,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "numpy.int64"
+       "252"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(np.sum(sample_dice))"
+    "np.sum(sample_dice)"
    ]
   },
   {
