automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -564,11 +564,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_5 = "
+    "set_5 = sample_dice == 5"
    ]
   },
   {
