--- a/index.ipynb
+++ b/index.ipynb
@@ -560,19 +560,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ True  True]\n"
+      "[False False False False  True False False False False False  True False\n",
+      " False False False False  True False False False False False  True False\n",
+      "  True  True  True  True  True  True False False False False  True False]\n"
      ]
     }
    ],
    "source": [
-    "true_5 = np.any(set_5,axis=0)\n",
+    "true_5 = np.any(set_5,axis=1)\n",
     "print(true_5)"
    ]
   },
