--- a/index.ipynb
+++ b/index.ipynb
@@ -587,13 +587,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3055555555555556\n"
+     ]
+    }
+   ],
    "source": [
-    "prob_5 = true_5.s\n",
+    "prob_5 = true_5.sum()/len(sample_dice)\n",
     "print(prob_5)"
    ]
   },
