automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -612,10 +612,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 49,
+   "metadata": {},
    "outputs": [],
    "source": [
     "set_5 = sample_dice == 5\n",
@@ -640,7 +638,7 @@
     }
    ],
    "source": [
-    "set_5_6 = sample_dice == 5 or 6"
+    "set_5_6 = sample_dice == 5 or"
    ]
   },
   {
