--- a/index.ipynb
+++ b/index.ipynb
@@ -622,23 +622,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-51-55c82852a428>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mset_5_6\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msample_dice\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset_5\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mset_6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "set_5_6 = sample_dice.any(set_5 or set_6,axis = 1)"
+    "set_5_6 = set([set_5,set_6])"
    ]
   },
   {
