--- a/index.ipynb
+++ b/index.ipynb
@@ -622,11 +622,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_5_6 = set([set_5,set_6])"
+    "set_5_6 = set_5 + set_6"
    ]
   },
   {
