--- a/index.ipynb
+++ b/index.ipynb
@@ -637,7 +637,7 @@
    },
    "outputs": [],
    "source": [
-    "set_any_5_6 = None\n",
+    "set_any_5_6 = set_5_6.any(s)\n",
     "print(set_any_5_6) "
    ]
   },
