--- a/index.ipynb
+++ b/index.ipynb
@@ -631,13 +631,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False False  True False False False False False  True False\n",
+      " False False False False  True False False False False False  True False\n",
+      "  True  True  True  True  True  True False False False False  True False]\n"
+     ]
+    }
+   ],
    "source": [
-    "set_any_5_6 = np.any(set_5_6,)\n",
+    "set_any_5_6 = np.any(set_5_6,axis=1)\n",
     "print(set_any_5_6) "
    ]
   },
@@ -649,7 +657,7 @@
    },
    "outputs": [],
    "source": [
-    "prob_5_6 = None\n",
+    "prob_5_6 = set\n",
     "print(prob_5_6)"
    ]
   },
