automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -657,7 +657,7 @@
    },
    "outputs": [],
    "source": [
-    "prob_5_6 = set\n",
+    "prob_5_6 = set_any_5_6.sum()\n",
     "print(prob_5_6)"
    ]
   },
