--- a/index.ipynb
+++ b/index.ipynb
@@ -645,7 +645,7 @@
     }
    ],
    "source": [
-    "set_any_5_6 = set_5_6.any()\n",
+    "set_any_5_6 = set_5_6.any(axis)\n",
     "print(set_any_5_6) "
    ]
   },
