--- a/index.ipynb
+++ b/index.ipynb
@@ -612,17 +612,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "set_5 = sample_dice == 5\n",
-    "set_6 = sample_dice == 5"
+    "set_6 = sample_dice == 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,27 +631,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[False False False False  True False False False False False  True False\n",
-      " False False False False  True False False False False False  True False\n",
-      "  True  True  True  True  True  True False False False False  True False]\n"
+      "[False False False False  True  True False False False False  True  True\n",
+      " False False False False  True  True False False False False  True  True\n",
+      "  True  True  True  True  True  True  True  True  True  True  True  True]\n"
      ]
     }
    ],
    "source": [
-    "set_any_5_6 = set_5_6.any(axis)\n",
+    "set_any_5_6 = set_5_6.any(axis=1)\n",
     "print(set_any_5_6) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
