automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
     }
    ],
    "source": [
-    "true_5 = np.any(set_5,axis=1)\n",
+    "true_5 = set_5.any(axis=1)\n",
     "print(true_5)"
    ]
   },
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -651,14 +651,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3055555555555556\n"
+      "0.5555555555555556\n"
      ]
     }
    ],
