--- a/index.ipynb
+++ b/index.ipynb
@@ -682,7 +682,7 @@
    },
    "outputs": [],
    "source": [
-    "sum_dice = None\n",
+    "sum_dice = sample di\n",
     "sum_8 = None"
    ]
   },
