--- a/index.ipynb
+++ b/index.ipynb
@@ -682,8 +682,8 @@
    },
    "outputs": [],
    "source": [
-    "sum_dice = sample di\n",
-    "sum_8 = None"
+    "sum_dice = sample_dice == 8\n",
+    "sum_8 = sum_dice.any()"
    ]
   },
   {
