--- a/index.ipynb
+++ b/index.ipynb
@@ -676,6 +676,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_dice == "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
    "outputs": [],
