--- a/index.ipynb
+++ b/index.ipynb
@@ -676,22 +676,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "252"
+       "array([ 2,  3,  4,  5,  6,  7,  3,  4,  5,  6,  7,  8,  4,  5,  6,  7,  8,\n",
+       "        9,  5,  6,  7,  8,  9, 10,  6,  7,  8,  9, 10, 11,  7,  8,  9, 10,\n",
+       "       11, 12])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum(sample_dice)"
+    "np.sum(sample_dice,1)"
    ]
   },
   {
@@ -700,7 +702,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sum_dice = sample_dice == 8\n",
+    "sum_dice = sample_dic\n",
     "sum_8 = sum_dice.any(axis = 1)"
    ]
   },
