automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -716,7 +716,7 @@
    ],
    "source": [
     "sum_dice = np.sum(sample_dice,1)\n",
-    "sum_8 = sum_dice.any(axis = 1)"
+    "sum_8 = sum(sum_dice)"
    ]
   },
   {
