automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -698,6 +698,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(sum_dice == 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
    "outputs": [
